--- a/styles.css
+++ b/styles.css
@@ -4,90 +4,180 @@ body, h1, h2, p, ul {
     margin: 0;
     padding: 0;
 }
-
-h1 {
-  text-align: center;
-  margin-bottom: 20px;
+/* NAVBAR*/
+#logo {
+    padding-left: 2px;
+    align-items: center;
+   
 }
 
-/* Style the header */
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
+
+.navbar-toggler {
+    border: none;
+    padding: 0;
 }
 
-/* Style the navigation */
-nav {
-    background-color: #f2f2f2;
-    padding: 10px;
+.navbar-toggler-icon {
+    display: none;
+}
+#nav-item4{
+    align-items: right;
 }
 
-nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
+.fa-bars {
+    font-size: 24px; 
+    color: #fff; 
 }
 
-nav ul li {
-    display: inline;
+@media (max-width: 768px) {
+    .navbar-nav {
+        flex-direction: column;
+    }
+    .nav-item {
+        margin-bottom: 10px;
+    }
 }
 
-nav ul li a {
-    text-decoration: none;
-    color: #333;
-    padding: 5px;
-}
-
-/* Hero Section */
+/* HERO SECTION */
 .hero {
-    background-image: url('Assets/heroesbg.jpg'); 
+    background-image: url('Assets/Jennie2.webp'); 
     background-size: cover;
-    height: 100vh;
+    font-family: "Playfair Display", serif; 
+    height: 700px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
+    padding-left: 70px;
     color: white;
-    animation: fadeIn 1s ease-in-out forwards;
+   
 }
 
-/*Services*/
-.heroes {
-    padding: 2rem 0;
+.heroes h1 {
+    font-size: 70px; 
   }
-  
-  .card {
+  .hero:hover {
+    animation: fadeIn 0.5s ease-in-out forwards, hoverEffect 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes hoverEffect {
+    0% {
+        transform: scale(1);
+    }
+    80% {
+        transform: scale(1.05);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+/* PRODUCT CARD*/
+.container {
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    gap: 5px;
+    padding: 5px;
+    
+}
+
+.card {
+    width: 250px;
+    border-radius: 10px;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+.card img {
     width: 100%;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    overflow: hidden;
-    margin: 10px;
-  }
-  
-  .card-img-top {
-    width: 100%;
-    height: 200px;
+    height: 250px;
     object-fit: cover;
-  }
-  
-  .card-body {
+}
+
+.card-content {
     padding: 10px;
-  }
-  
-  .card-title {
-    font-size: 1.5em;
+}
+
+.card-title {
+    font-size: 15px;
+    font-weight: bold;
     margin-bottom: 10px;
+}
+
+.card-price {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 5px;
+}
+
+.card-colors {
+    font-size: 14px;
+    color: #ffffff;
+}
+
+
+/* TEAM */
+.container h1 {
+    text-align: center;
+    color: #333333;
+    margin-top: 30 px;
   }
   
-  .card-text {
-    margin-bottom: 20px;
+  .members {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 40px;
+  }
+  
+  .member {
+    width: 200px;
+    height: 200px; 
+    background-color: #ffffff;
+    border-radius: 50%; 
+    margin: 20px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .member img {
+    max-width: 100%; 
+    max-height: 100%; 
+    border-radius: 50%; 
   }
 
-/* Style the main content */
+  /* ICON SECTION */
+  .icon-section {
+    padding: 30px 0;
+    text-align: center;
+    background-color: #ffffff;
+    color: #000000;
+}
+
+.feature-icon {
+    width: 100px; 
+    height: auto;
+    margin-bottom: 30px;
+    
+}
+
+/* MAIN CONTENT*/
 main {
-    padding: 20px;
+    margin: 1px;
+    padding: 1px;
 }
 
 section {
@@ -95,116 +185,26 @@ section {
 }
 
 h2 {
-    color: #333;
+    color: #000000;
     margin-bottom: 10px;
+    align-items: center;
 }
 
-/* Style the footer */
+/* FOOTER */
 footer {
     background-color: #333;
     color: #fff;
     padding: 10px;
     text-align: center;
 }
-
-/* Product card */
-.card {
-    margin-bottom: 20px;
-}
-
-/* Team */
-#team
-{
-	padding-top: 50px;
-	padding-bottom: 50px;
-	
-}
-
-#team h1 {
-  margin-bottom: 50px; /* Add this line */
-}
-
-.profile-pic .img-box
-{
-	opacity: 1;
-	display: block;
-	position: relative;
-}
-
-.profile-pic .img-box img
-{
-	filter: grayscale(1);
-	
-}
-
-.profile-pic .img-box img:hover
-{
-	filter: grayscale(0);
-	cursor: pointer;
-	
-}
-
-.profile-pic h2
-{
-	font-size: 22px;
-	margin-top:15px;
-	color: #000000!important;
-	
-}
-
-#team .fa
-{
-	height:25px;
-	width: 25px;
-	background: #fff;
-	padding: 4px;
-	border-radius: 50%;
-}
-
-.img-box ul
-{
-	padding: 15px 0;
-	position: absolute;
-	z-index: 2;
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	opacity: 0;
-}
-
-.img-box ul li
-{
-	padding: 5px;
-	display: inline-block;
-}
-
-.img-box:hover ul
-{
-	opacity: 1;
-	
-}
-
-.img-box ul, .img-box ul
-{
-	transition: 0.5s;
-}
-
-.img-responsive
-{
-	height: 250px;
-	width: 200px;
-	margin: 0px 50px;
-	
-	
-}
-
-/* Form */
+/* FORM */
 
 #contact
 {
-	background: #efefef;
+	background: #000000;
+    color: #000000;
 	padding-top: 40px;
-	padding-bottom: 40px;
+	padding-bottom: 0px;
 
 }
 
@@ -215,7 +215,7 @@ footer {
 
 ::placeholder
 {
-	color: #999!important;
+	color: #ffffff!important;
 }
 
 .follow
@@ -228,10 +228,11 @@ footer {
 .contact-info .fa
 {
 	margin: 10px;
-	color: #949596;
+	color: #000000;
 	font-weight: bold;
 }
-
+@media only screen and (max-width: 600px) {
+  }
 
 
   
