--- a/styles.css
+++ b/styles.css
@@ -260,18 +260,20 @@ body{
         color: #ffffff;
     }
     
-    .fa-heart {
-        cursor: pointer;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: relative;
-    }
     
-    .fa-heart:before {
-        content: "";
-        display: block;
-    }
+    .add-to-cart {
+  margin-top: 10px;
+  padding: 5px 10px;
+  font-size: 14px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.add-to-cart:hover {
+  background-color: #333;
+  color: #fff;
+  cursor: pointer;
+}
 
 /* TEAM */
     .container h1 {
