--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,17 @@ body, h2, p, ul {
 
 h1 {
   margin-bottom: 20px;
+  font-family: "Playfair Display", serif; 
+
 }
 
-h2{
+h2 {
     text-align: center;
+    font-family: "Playfair Display", serif; 
+
 }
+
+
 
 /* NAVIGATION BAR */
 .navbar {
@@ -153,6 +159,8 @@ h2{
     padding: 10px;
     max-width: 1200px;
     margin: auto;
+    font-family: 'Minion Pro', sans-serif;
+
 }
 
 .about-container img {
@@ -193,10 +201,6 @@ h2{
 
 
 /* MAIN CONTENT*/
-section {
-    margin-bottom: 20px;
-}
-
 h2 {
     color: #333;
     margin-bottom: 10px;
@@ -212,7 +216,6 @@ h2 {
         max-width: 1200px; 
         margin: 40px auto; 
 }
-    
 
     .card {
     flex-basis: 250px; 
@@ -222,29 +225,22 @@ h2 {
     text-align: center;
     }
 
-    .card-container {
+    .card-content{
         display: grid;
-        grid-template-columns: repeat(4, 1fr); /* This creates a grid with 4 columns */
-        gap: 20px; /* This adds some space between the cards */
+        grid-template-columns: repeat(3, 1fr); 
+        gap: 20px; 
+        padding: 45px;
       }
     
       .card {
-        grid-column: span 1; /* This ensures that each card spans only 1 column */
+        grid-column: span 1; 
       }
-
-        
-    
 
     .card img {
         width: 100%;
         height: 250px;
         object-fit: cover;
     }
-
-    .card-content {
-        padding: 10px;
-    }
-
     .card-title {
         font-family: "Playfair Display", serif; 
         font-size: 15px;
@@ -298,7 +294,27 @@ h2 {
     content: "";
     display: block;
 }
+/* ICON SECTION */
+.mb-5{
+    font-family: "Playfair Display", serif; 
+    font-size: 50px;
+    color: black;
+    
+}
+.icon-section {
+    padding: 50px 0;
+    text-align: center;
+    background: linear-gradient(to right bottom, #89ADBD, #fdfeff);
+    color: #000000;
+    font-family: 'Minion Pro', sans-serif;
+}
 
+    .feature-icon {
+        width: 100px; 
+        height: auto;
+        margin-bottom: 30px;
+
+    }
 
 /* TEAM */
 
@@ -422,17 +438,17 @@ h2 {
     }
 }
 
-/
+/* Responsive design for small screens */
 @media (max-width: 768px) {
     .contact-section {
-        max-width: 100%; /
+        max-width: 100%; /* Make the section take up 100% of the screen width on small screens */
     }
 }
 
-
+/* Responsive design for very small screens */
 @media (max-width: 576px) {
     .contact-section {
-        max-width: 100%; /
+        max-width: 100%; /* Make the section take up 100% of the screen width on very small screens */
     }
 }
 /* FOOTER */
