--- a/cart.css
+++ b/cart.css
@@ -1,7 +1,11 @@
 /* cart.css */
-
 body {
     font-family: Arial, sans-serif;
+    background: linear-gradient(to right bottom, #182B2F, #fdfeff);
+    color: rgb(0, 0, 0);
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    flex-wrap: wrap; 
   }
   
   #site {
@@ -18,6 +22,8 @@ body {
   #content {
     background-color: #f5f5f5;
     padding: 20px;
+    border-radius: 20px;
+    width: 500 px;
   }
   
   .shopping-cart {
@@ -58,15 +64,18 @@ body {
   
   .btn {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #182B2F;
     color: #fff;
     border: none;
     text-decoration: none;
     cursor: pointer;
+    border-radius: 20px;
+    font-size: 15px;
+    font-weight: bold;
   }
   
   .btn-remove {
-    background-color: #dc3545;
+    background-color: #85c5d8;
   }
   
   #site-info {
@@ -84,4 +93,6 @@ body {
       display: block;
       margin-bottom: 10px;
     }
+  }
+  @media only screen and (max-width: 600px) {
   }
