--- a/login.css
+++ b/login.css
@@ -1,7 +1,7 @@
 /* login.css */
 body{
-  background-color: #151717;
-  margin-top: 120px;
+  background-color: black;
+  margin-top: 10px;
 }
 
 
@@ -83,7 +83,7 @@ body{
   
   .btn-block {
     margin: 20px 0 10px 0;
-    background-color: #151717;
+    background-color: #090a0a;
     border: none;
     color: rgb(0, 0, 0);
     font-size: 15px;
@@ -93,6 +93,12 @@ body{
     width: 100%;
     cursor: pointer;
     color: white;
+  }
+
+  .button:hover {
+    background-color: #cfcfcf;
+    color: #ffffff;
+    transition: background-color 0.3s ease-in-out;
   }
   
   .button-submit:hover {
@@ -111,16 +117,15 @@ body{
     margin-top: 10px;
     width: 100%;
     height: 50px;
-    border-radius: 10px;
+    border-radius: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-weight: 500;
     gap: 10px;
-    border: 1px solid #ffffff;
-    background-color: rgb(0, 0, 0);
+    background-color: #182B2F;
     cursor: pointer;
-    transition: 0.2s ease-in-out;
+    transition: 0.4s ease-in-out;
   }
   
   .btn:hover {
