--- a/checkout.css
+++ b/checkout.css
@@ -1,9 +1,9 @@
 /* checkout.css */
 
-h3, h2, h1{
+h3, h2, h1 {
     font-family: "Playfair Display", serif;
-
 }
+
 .title {
     font-size: 40px;
     font-weight: 600;
@@ -16,7 +16,6 @@ h3, h2, h1{
     margin: 20px auto;
     font-family: 'Montserrat', sans-serif;
     background-color: #fff;
-    border-radius: 10px;
     max-width: 700px;
 }
 
@@ -40,6 +39,7 @@ h3, h2, h1{
 .payment-form .products {
     background-color: #89ADBD;
     padding: 25px;
+    border-radius: 20px;
     margin-bottom: 30px;
     list-style-type: none; /* Remove bullets */
     padding-left: 0; /* Remove left padding */
@@ -77,8 +77,13 @@ h3, h2, h1{
     line-height: 1;
 }
 
-#checkout-details p {
-    margin-bottom: 10px;
+#checkout-details ul {
+    list-style-type: none; /* Remove bullets from ul */
+    padding-left: 0; /* Remove left padding */
+}
+
+#checkout-details li {
+    margin-bottom: 10px; /* Add some space between items */
 }
 
 .payment-form .card-details {
@@ -146,4 +151,3 @@ h3, h2, h1{
         margin-top: 2em;
     }
 }
-
