--- a/checkout.css
+++ b/checkout.css
@@ -41,8 +41,8 @@ h3, h2, h1 {
     padding: 25px;
     border-radius: 20px;
     margin-bottom: 30px;
-    list-style-type: none; /* Remove bullets */
-    padding-left: 0; /* Remove left padding */
+    list-style-type: none; 
+    padding-left: 0; 
 }
 
 .payment-form .products .item {
@@ -78,12 +78,12 @@ h3, h2, h1 {
 }
 
 #checkout-details ul {
-    list-style-type: none; /* Remove bullets from ul */
-    padding-left: 0; /* Remove left padding */
+    list-style-type: none; 
+    padding-left: 0; 
 }
 
 #checkout-details li {
-    margin-bottom: 10px; /* Add some space between items */
+    margin-bottom: 10px; 
 }
 
 .payment-form .card-details {
